# dehumidifier-monitor

./: LICENSE  README.md
firmware/arduino-uno/: .gitignore  platformio.ini  secrets.example.ini
firmware/arduino-uno/src/: main.cpp
services/telegram-proxy/: Cargo.toml
services/telegram-proxy/deploy/systemd/: telegram-proxy.service
services/telegram-proxy/src/: main.rs
